welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: Missing closing brace `}' assumed here
def hunt(c:Color) {
^SlugSnail:3: error: expected class or object definition
def hunt(c:Color) {
^SlugSnail:22: error: expected class or object definition
def isFacingTrail(c:color):Boolean = {
^SlugSnail:37: error: expected class or object definition
def avanceCaseCouleur() {
^